# ex4

./: Algorithm.cpp  Algorithm.h  Block.cpp  Block.h  CMakeLists.txt  CacheAlgorithm.cpp  CacheAlgorithm.h  CacheFS.cpp  CacheFS.h  CacheLog1  CacheLog2  CacheLog3  FbrAlgorithm.cpp  FbrAlgorithm.h  LfuAlgorithm.cpp  LfuAlgorithm.h  LruAlgorithm.cpp  LruAlgorithm.h  Makefile  README  StatLog1  StatLog2  StatLog3  TEST.cpp  Test  Test1.cpp  Test2.cpp  check.cpp  check.h  testLFU.cpp
